# ArithmeticParser

./: .gitignore  ArithmeticParser.sln  ArithmeticParser.sln.DotSettings  CHANGELOG.md  LICENSE.md
ArithmeticParser/: ArgumentsParsing.cpp  ArgumentsParsing.h  ArithmeticParser.rc  ArithmeticParser.vcxproj  ArithmeticParser.vcxproj.filters  ArithmeticParserApi.cpp  ArithmeticParserApi.h  BuiltinFunction.h  BuiltinFunctionType.h  CMakeLists.txt  CmdOption.h  CommandLineOption.h  ConstantType.h  ErrorCode.h  ErrorCodeDescription.txt  ErrorData.h  Help.txt  LexicalParser.cpp  LexicalParser.h  Node.cpp  Node.h  OperatorType.h  ParenthesisSide.h  ParenthesisType.h  Parser.cpp  Parser.h  SyntacticParser.cpp  SyntacticParser.h  Token.cpp  Token.h  TokenType.h  Utils.cpp  Utils.h  Version.h  main.cpp  main.h  resource.h
ArithmeticParser/src/: CMakeLists.txt  Help.txt
ArithmeticParser/src/Enums/: ConstantType.h  TokenType.h
ArithmeticParser/src/Parser/: CMakeLists.txt  ErrorData.cpp  ErrorData.h  LexicalParser.cpp  Node.h  Token.h
ArithmeticParser/src/Utils/: ArgumentsParsing.cpp  ArithmeticParserApi.cpp  CMakeLists.txt  Utils.cpp  Utils.h  Version.h
ArithmeticParser/src/headers/: CMakeLists.txt
ArithmeticParser/tests/: CMakeLists.txt
ArithmeticParser/tests/ArgumentsParsing/: ArgsParsingInvalidDataTests.cpp  ArgumentsParsingTests.cpp  CMakeLists.txt
ArithmeticParser/tests/LexicalParser/: CMakeLists.txt  LexicalParserBuiltinFunctionsTests.cpp  LexicalParserConstantsTests.cpp  LexicalParserTests.cpp
ArithmeticParser/tests/SyntacticParser/: AbsoluteTests.cpp  BuiltinFunctionsTests.cpp  CMakeLists.txt  ConstantTests.cpp  PowerTests.cpp  SyntacticParserBasicTests.cpp  SyntacticParserBracketsTests.cpp  SyntacticParserInvalidDataTests.cpp
ArithmeticParserTests/: AbsoluteTests.cpp  ArgsParsingInvalidDataTests.cpp  ArgumentsParsingTests.cpp  ArithmeticParserTests.vcxproj  ArithmeticParserTests.vcxproj.filters  BuiltinFunctionsTests.cpp  ConstantTests.cpp  (+10 more)
(+5 files in other folders)
